@@ -39,6 +39,7 @@ Bug Fixes::
 * don't include children of section with empty title in TOC
 * don't include children of section with empty title in outline
 * only load Treetop runtime so it does not overload `require` method
+* fix collation order of index terms that differ only in case
 
 == 2.3.0 (2022-08-16) - @mojavelinux
 
